# rust-memchr

./: Cargo.toml  README.md  TODO.md
src/: iter.rs  lib.rs
src/tests/: iter.rs  memchr.rs  mod.rs
src/x86/: avx.rs
